--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div id="end-screen" class="screen" style="display: none;">
-        <h1>Game Over</h1>
+        <h1 style="font-size: 60px;">Game Over</h1>
         <p id="final-distance">Distance Travelled: 0m</p>
         <p id="high-distance">Best Distance: 0m</p>
         <button id="replay-button" style="
